# esp32-conveyor

./: CMakeLists.txt
main/: CMakeLists.txt  encoder.c  encoder.h  gate_driver.c  gate_driver.h  global_header.h  io_driver.c  io_driver.h  main.c  process_data.c  process_data.h  tcp_client.c  tcp_client.h  wifi.c  wifi.h  wifi_station.c  wifi_station.h
